# pkg/openapi/types.gen.go
@@ -3,6 +3,27 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.13.0 DO NOT EDIT.
 package openapi
 
+// Defines values for AuthorizeParamsResponseType.
+const (
+	Code             AuthorizeParamsResponseType = "code"
+	CodeIdToken      AuthorizeParamsResponseType = "code id_token"
+	CodeIdTokenToken AuthorizeParamsResponseType = "code id_token token"
+	CodeToken        AuthorizeParamsResponseType = "code token"
+	IdToken          AuthorizeParamsResponseType = "id_token"
+	IdTokenToken     AuthorizeParamsResponseType = "id_token token"
+	Token            AuthorizeParamsResponseType = "token"
+)
+
+// Defines values for AuthorizeParamsScope.
+const (
+	Address       AuthorizeParamsScope = "address"
+	Email         AuthorizeParamsScope = "email"
+	OfflineAccess AuthorizeParamsScope = "offline_access"
+	Openid        AuthorizeParamsScope = "openid"
+	Phone         AuthorizeParamsScope = "phone"
+	Profile       AuthorizeParamsScope = "profile"
+)
+
 // Defines values for TokenParamsGrantType.
 const (
 	AuthorizationCode                     TokenParamsGrantType = "authorization_code"
@@ -65,6 +86,30 @@ type TokenResponseSchema struct {
 	// TokenType token_type
 	TokenType *string `json:"token_type,omitempty"`
 }
+
+// AuthorizeParams defines parameters for Authorize.
+type AuthorizeParams struct {
+	// ResponseType response_type
+	ResponseType *AuthorizeParamsResponseType `form:"response_type,omitempty" json:"response_type,omitempty"`
+
+	// Scope scope
+	Scope *AuthorizeParamsScope `form:"scope,omitempty" json:"scope,omitempty"`
+
+	// ClientId client_id
+	ClientId *string `form:"client_id,omitempty" json:"client_id,omitempty"`
+
+	// State state
+	State *string `form:"state,omitempty" json:"state,omitempty"`
+
+	// RedirectUri http://localhost:1234/rp/auth/callback
+	RedirectUri *string `form:"redirect_uri,omitempty" json:"redirect_uri,omitempty"`
+}
+
+// AuthorizeParamsResponseType defines parameters for Authorize.
+type AuthorizeParamsResponseType string
+
+// AuthorizeParamsScope defines parameters for Authorize.
+type AuthorizeParamsScope string
 
 // TokenParams defines parameters for Token.
 type TokenParams struct {
